tests/NormalTests/paczka1/fuzzy1/64287548.err
Error in line 3: w7TM A972 16,9
Error in line 9: Rhpvjxo A972 76,9
Error in line 2: QgNl5urgu A499 52,9
Error in line 10: EP1 S861 30,6
Error in line 14: EP1 A972 85,1
Error in line 23: QgNl5urgu A499 39,5
Error in line 25: QgNl5urgu S861 98,2
Error in line 24: EP1 A499 22,2
Error in line 28: W0VDYA A499 22,1
Error in line 34: AZOsfUYa A972 6,5
